--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,16 @@
 appdirs==1.4.0
 beautifulsoup4==4.5.3
 bs4==0.0.1
+click==6.7
+Flask==0.12
 html5lib==0.999999999
+itsdangerous==0.24
+Jinja2==2.9.5
+MarkupSafe==0.23
 nltk==3.2.2
 packaging==16.8
 pyparsing==2.1.10
+requests==2.13.0
 six==1.10.0
 webencodings==0.5
+Werkzeug==0.11.15
