--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 .idea
 *.pyc
 venv/
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
