Use Bower for package management

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 .idea
 *.pyc
 venv/
-
-# Elastic Beanstalk Files
-.elasticbeanstalk/*
-!.elasticbeanstalk/*.cfg.yml
-!.elasticbeanstalk/*.global.yml
+bower_components
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
+
