Use Grunt for grouping vendor assets

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 .idea
 *.pyc
 venv/
-bower_components
+bower_components/
+node_modules/
+static/vendor/
 
 # Elastic Beanstalk Files
 .elasticbeanstalk/*
