--- a/bower.json
+++ b/bower.json
@@ -16,10 +16,8 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "^3.3.7",
-    "datatables.net-dt": "^3.2.2",
     "jquery": "^3.2.1",
-    "datatables.net": "^1.10.15"
+    "datatables.net": "^1.10.15",
+    "bootstrap": "v4.0.0-alpha.6"
   }
 }
-
