--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "jquery": "^3.2.1",
     "datatables.net": "^1.10.15",
-    "bootstrap": "v4.0.0-alpha.6"
+    "bootstrap": "v4.0.0-alpha.6",
+    "components-font-awesome": "^4.7.0",
+    "holderjs": "^2.9.4"
   }
 }
