--- a/.ebextensions/bower-grunt.config
+++ b/.ebextensions/bower-grunt.config
@@ -2,14 +2,14 @@ packages:
     yum:
         git: []
 commands:
-    install_npm:
-        command: sudo yum -y --enablerepo=epel install nodejs npm
-    install_bower_grunt_cli:
+    01_install_npm:
+        command: |
+            sudo yum -y --enablerepo=epel install nodejs npm
+            sudo npm install -g npm
+    02_install_bower_grunt_cli:
         command: sudo npm install -g bower grunt-cli
 container_commands:
-    install_local_grunt:
-        command: sudo npm install grunt
-    install_local_grunt_tasks:
-        command: sudo npm install --save-dev grunt-bowercopy grunt-replace load-grunt-tasks
-    run_grunt:
+    01_install_local_grunt:
+        command: sudo npm install grunt grunt-bowercopy grunt-replace load-grunt-tasks
+    02_run_grunt:
         command: grunt
