--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ beautifulsoup4==4.5.3
 bs4==0.0.1
 click==6.7
 Flask==0.12
+Flask-JSGlue==0.3.1
 gunicorn==19.7.1
 html5lib==0.999999999
 itsdangerous==0.24
