--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "postinstall": "grunt"
   },
   "devDependencies": {
-    "grunt-contrib-jshint": "^1.1.0"
+    "grunt-contrib-jshint": "^1.1.0",
+    "grunt-pylint": "^1.3.1"
   }
 }
