--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ bower_components/
 node_modules/
 static/vendor/
 
+artictools/ANC-*.*
+
 # Elastic Beanstalk Files
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
